syntax = "proto3";

package com.ajaxproject.internalapi.finance.input.reqreply;

option java_multiple_files = true;

import "com/ajaxproject/internalapi/finance/commonmodels/finance.proto";

message CreateFinanceRequest {
  commonmodels.FinanceMessage finance = 1;
}

message CreateFinanceResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.FinanceMessage finance = 1;
  }

  message Failure {
    string message = 100;
  }
}
