syntax = "proto3";

package com.ajaxproject.internalapi.finance.input.reqreply;

option java_multiple_files = true;

import "com/ajaxproject/internalapi/finance/commonmodels/finance.proto";

message GetAllFinancesByIdRequest {
  uint64 user_id =1;
  commonmodels.FinanceType finance_type = 2;
}

message GetAllFinancesByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    repeated commonmodels.FinanceMessage finance = 1;
  }

  message Failure {
    string message = 100;
  }
}
